--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html{
 body{
     /* background: black; */
     margin: 0;
+    flex-basis: auto;
 }
 
 a:visited{
@@ -18,6 +19,9 @@ a {
     padding-left: 7.5vw;
     padding-right: 7.5vw;
     margin: 0px;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
 }
 
 .navigation{
@@ -35,10 +39,11 @@ a {
     gap: 20px ;
     list-style: none;
     flex-wrap: wrap;
+    
 }
 
 .navigation  > img {
-    width: 240px;
+    /* width: 240px; */
     height: auto;
     /* margin-left: 5.5vw; */
 }
@@ -59,8 +64,8 @@ a {
     padding-right: 7vw;
     /* background: #000E28;  */
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 70px;
+    grid-template-columns: 0.5fr 0.5fr 0.5fr;
+    grid-template-rows: 0.5fr 0.76fr;
     background-color: rgba(240, 248, 255, 0.592);
     grid-template-areas: 
     "a b c"
@@ -134,7 +139,8 @@ a {
 
 .about{
     text-overflow: ellipsis;
-    height: 80vh;
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items:center;
@@ -142,21 +148,23 @@ a {
     background: #121D33;
     background-repeat: no-repeat;
     background-size:cover;
-    width: 100%;
     color: white;
     font-size: 30px;
     flex-wrap: wrap;
     gap: 40px;
+    padding-bottom: 20px;
+    padding-top: 30px;
 
 }
 
 .about > p, .about > footer {
     margin-right: 0;
-    padding: 0 50px 0 50px;
+    padding: 0 20px 0 20px;
 }
 
-.projects{
-    height: 50vh;
+/* .projects{
+    padding: 0 10px 20px 10px ;
+    height: 100%;
     display: flex;
     align-content:center;
     justify-content: center;
@@ -170,19 +178,71 @@ a {
     font-size: 25px;
     flex-wrap: wrap;
     gap: 30px;
-}
+    
+} */
 
 .check-projects{
     color: white;
     border: 3px solid aquamarine;
     border-radius: 40px;
     padding: 10px 40px 10px 40px;
+    font-size: medium;
 
     
 }
 
 
+/* Hamburger */
 
+
+.hamburger{
+    display: none;
+    flex-direction: column;
+    width: 60px;
+    cursor: pointer;
+}
+
+.hamburger > span{
+    background: #fffff5;
+    border-radius: 10px;
+    height: 5px;
+    margin: 8px 0;
+    transition: .4s cubic-bezier(0.5, -0.5, 0.3, 1.5);
+}
+
+.hamburger > span:nth-of-type(1){
+    width:100%;
+    
+}
+  
+.hamburger > span:nth-of-type(2){
+    width:100%;
+}
+  
+  
+.hamburger > span:nth-of-type(3){
+    width:100%;   
+}
+
+.hamburger > input[type="checkbox"]{
+    display: none;
+}
+
+.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(1){
+    transform-origin: bottom;
+    transform: translate(0px, 20px) rotateZ(45deg);
+}
+.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(2){
+    transform-origin: bottom;
+    transform:scale(0)
+}
+.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(3){
+    transform-origin: top;
+    transform: translate(0px, -20px) rotateZ(-45deg);
+}
+
+
+/* Hambuger:end */
 
 .visually-hidden {
     clip: rect(0 0 0 0);
@@ -204,16 +264,41 @@ a {
         padding-right: 1vw;
     }
     .about > p{
-        margin: 0 100px 0 100px;
+        margin: 0 20px 0 20px;
     }
     
 }
 @media only screen and (max-width: 768px ) {
 
+
     .footer {
         padding-left: 0vw;
-        padding-right: 0vw;
-        
+        padding-right: 0vw; 
     }
-    
+    .footer > ul {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+
+    }
+    .footer-navigation{
+        grid-area: 1 / 1 / 3/ 2;
+    }
+    .footer-icons{
+        grid-area: 1 / 3 / 3 / 4;
+    }
+    .about{
+        font-size: 20px;
+    }
+    .hamburger{
+        display: flex;
+    }
+    .navigation > ul, .navigation{
+        flex-direction: column;
+        padding: 0;
+    }
+    .hamburger{
+        display: flex;
+        align-content: space-around;
+    }
 }
