--- a/style.css
+++ b/style.css
@@ -1,165 +1,158 @@
-html{
-    background-color: #121D33;
+html {
+  background-color: #121d33;
 }
-body{
-    /* background: black; */
-    margin: 0;
-    flex-basis: auto;
+body {
+  /* background: black; */
+  margin: 0;
+  flex-basis: auto;
 }
 
-a:visited{
-    color: inherit;
+a:visited {
+  color: inherit;
 }
 a {
-    color: black;
+  color: black;
 }
-.navigation{
-    display: flex;
-    background-color: rgba(255, 255, 255, 0.092);
-    padding-left: 7.5vw;
-    padding-right: 7.5vw;
-    margin: 0px;
-    flex-direction: column;
-    align-content: center;
-    align-items: center;
-}
-
-.navigation{
-    background-color: rgba(255, 255, 255, 0.63);
-
-} 
-
-.navigation > ul{ 
-    display: flex;
-    justify-content: flex-end;
-    /* justify-content: space-around; */
-    flex-direction: row;
-    align-items: center;
-    flex: 1;
-    gap: 20px ;
-    list-style: none;
-    flex-wrap: wrap;
-    
+.navigation {
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.092);
+  padding-left: 7.5vw;
+  padding-right: 7.5vw;
+  margin: 0px;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
 }
 
-.navigation  > img {
-    /* width: 240px; */
-    height: auto;
-    /* margin-left: 5.5vw; */
+.navigation {
+  background-color: rgba(255, 255, 255, 0.63);
+}
+
+.navigation > ul {
+  display: flex;
+  justify-content: flex-end;
+  /* justify-content: space-around; */
+  flex-direction: row;
+  align-items: center;
+  flex: 1;
+  gap: 20px;
+  list-style: none;
+  flex-wrap: wrap;
+}
+
+.navigation > img {
+  /* width: 240px; */
+  height: auto;
+  /* margin-left: 5.5vw; */
 }
 
 .navigation > ul > li > a {
-
-    text-transform: uppercase;
-    text-decoration: none;
-    flex-grow: 4;
-    font-size: 20px;
-    font-family: 'Anton', sans-serif;
-    transition: color 0.2s ease-in-out;
+  text-transform: uppercase;
+  text-decoration: none;
+  flex-grow: 4;
+  font-size: 20px;
+  font-family: "Anton", sans-serif;
+  transition: color 0.2s ease-in-out;
 }
 
-
 .footer {
-    padding-left: 7vw;
-    padding-right: 7vw;
-    /* background: #000E28;  */
-    display: grid;
-    grid-template-columns: 0.5fr 0.5fr 0.5fr;
-    grid-template-rows: 0.5fr 0.76fr;
-    background-color: rgba(240, 248, 255, 0.592);
-    grid-template-areas: 
+  padding-left: 7vw;
+  padding-right: 7vw;
+  /* background: #000E28;  */
+  display: grid;
+  grid-template-columns: 0.5fr 0.5fr 0.5fr;
+  grid-template-rows: 0.5fr 0.76fr;
+  background-color: rgba(240, 248, 255, 0.592);
+  grid-template-areas:
     "a b c"
-    "a d c"
-    ;
-    align-items: center;
-    justify-items: center;
+    "a d c";
+  align-items: center;
+  justify-items: center;
 }
 
 .footer > img {
-    align-self:center;
-    object-fit: cover;
-    width: 70%;
-    grid-area: b;
-    margin: 0;
+  align-self: center;
+  object-fit: cover;
+  width: 70%;
+  grid-area: b;
+  margin: 0;
 }
 
 .footer > ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 10px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 10px;
 
-    flex-direction: row;
-    justify-self: center;
-    align-self: flex-end;
-
+  flex-direction: row;
+  justify-self: center;
+  align-self: flex-end;
 }
 
-.footer-navigation > li > a{
-    grid-area: a ;
+.footer-navigation > li > a {
+  grid-area: a;
 
-    transition: color 0.2s ease-in-out;  
+  transition: color 0.2s ease-in-out;
 }
 
 .footer-navigation {
-    justify-self: center; 
-    align-self: center; 
+  justify-self: center;
+  align-self: center;
 }
 
-
-.footer-icons > li > a{
-    grid-area: c;
-
+.footer-icons > li > a {
+  grid-area: c;
 }
 
-.footer > ul > li > a, .about > footer > a {
-    text-transform: uppercase;
-    text-decoration: none;
-    font-family: "Anton", sans-serif;
+.footer > ul > li > a,
+.about > footer > a {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: "Anton", sans-serif;
 }
 
 .footer > span {
-    grid-area: d;
-    align-self: flex-end; 
+  grid-area: d;
+  align-self: flex-end;
 }
-
 
 .navigation > ul > li > a:hover,
- .footer-navigation > li > a:hover , .about > footer > a:hover {
-    color: rgb(255, 102, 0);
-    transition: color 0.2s ease-in-out;
+.footer-navigation > li > a:hover,
+.about > footer > a:hover {
+  color: rgb(255, 102, 0);
+  transition: color 0.2s ease-in-out;
 }
 
-.work{
-    font-size: 46px;
-    font-weight: 1000;
-    color: aquamarine;
+.work {
+  font-size: 46px;
+  font-weight: 1000;
+  color: aquamarine;
 }
 
-.about{
-    text-overflow: ellipsis;
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    flex-direction: column;
-    background: #121D33;
-    background-repeat: no-repeat;
-    background-size:cover;
-    color: white;
-    font-size: 30px;
-    flex-wrap: wrap;
-    gap: 40px;
-    padding-bottom: 20px;
-    padding-top: 30px;
-
+.about {
+  text-overflow: ellipsis;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #121d33;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  font-size: 30px;
+  flex-wrap: wrap;
+  gap: 40px;
+  padding-bottom: 20px;
+  padding-top: 30px;
 }
 
-.about > p, .about > footer {
-    margin-right: 0;
-    padding: 0 20px 0 20px;
+.about > p,
+.about > footer {
+  margin-right: 0;
+  padding: 0 20px 0 20px;
 }
 
 /* .projects{
@@ -181,124 +174,110 @@ a {
     
 } */
 
-.check-projects{
-    color: white;
-    border: 3px solid aquamarine;
-    border-radius: 40px;
-    padding: 10px 40px 10px 40px;
-    font-size: medium;
-
-    
+.check-projects {
+  color: white;
+  border: 3px solid aquamarine;
+  border-radius: 40px;
+  padding: 10px 40px 10px 40px;
+  font-size: medium;
 }
-
 
 /* Hamburger */
 
-
-.hamburger{
-    display: none;
-    flex-direction: column;
-    width: 60px;
-    cursor: pointer;
+.hamburger {
+  display: none;
+  flex-direction: column;
+  width: 60px;
+  cursor: pointer;
 }
 
-.hamburger > span{
-    background: #fffff5;
-    border-radius: 10px;
-    height: 5px;
-    margin: 8px 0;
-    transition: .4s cubic-bezier(0.5, -0.5, 0.3, 1.5);
+.hamburger > span {
+  background: #fffff5;
+  border-radius: 10px;
+  height: 5px;
+  margin: 8px 0;
+  transition: 0.4s cubic-bezier(0.5, -0.5, 0.3, 1.5);
 }
 
-.hamburger > span:nth-of-type(1){
-    width:100%;
-    
-}
-  
-.hamburger > span:nth-of-type(2){
-    width:100%;
-}
-  
-  
-.hamburger > span:nth-of-type(3){
-    width:100%;   
+.hamburger > span:nth-of-type(1) {
+  width: 100%;
 }
 
-.hamburger > input[type="checkbox"]{
-    display: none;
+.hamburger > span:nth-of-type(2) {
+  width: 100%;
 }
 
-.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(1){
-    transform-origin: bottom;
-    transform: translate(0px, 20px) rotateZ(45deg);
-}
-.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(2){
-    transform-origin: bottom;
-    transform:scale(0)
-}
-.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(3){
-    transform-origin: top;
-    transform: translate(0px, -20px) rotateZ(-45deg);
+.hamburger > span:nth-of-type(3) {
+  width: 100%;
 }
 
+.hamburger > input[type="checkbox"] {
+  display: none;
+}
+
+.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(1) {
+  transform-origin: bottom;
+  transform: translate(0px, 20px) rotateZ(45deg);
+}
+.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(2) {
+  transform-origin: bottom;
+  transform: scale(0);
+}
+.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(3) {
+  transform-origin: top;
+  transform: translate(0px, -20px) rotateZ(-45deg);
+}
 
 /* Hambuger:end */
 
 .visually-hidden {
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    height: 1px;
-    overflow: hidden;
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-  }
-
-
-
-
-@media only screen and (max-width: 1000px ) {
-
-    .footer {
-        padding-left: 1vw;
-        padding-right: 1vw;
-    }
-    .about > p{
-        margin: 0 20px 0 20px;
-    }
-    
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
-@media only screen and (max-width: 768px ) {
 
-
-    .footer {
-        padding-left: 0vw;
-        padding-right: 0vw; 
-    }
-    .footer > ul {
-        display: flex;
-        flex-direction: column;
-        align-self: center;
-
-    }
-    .footer-navigation{
-        grid-area: 1 / 1 / 3/ 2;
-    }
-    .footer-icons{
-        grid-area: 1 / 3 / 3 / 4;
-    }
-    .about{
-        font-size: 20px;
-    }
-    .hamburger{
-        display: flex;
-    }
-    .navigation > ul, .navigation{
-        flex-direction: column;
-        padding: 0;
-    }
-    .hamburger{
-        display: flex;
-        align-content: space-around;
-    }
+@media only screen and (max-width: 1000px) {
+  .footer {
+    padding-left: 1vw;
+    padding-right: 1vw;
+  }
+  .about > p {
+    margin: 0 20px 0 20px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .footer {
+    padding-left: 0vw;
+    padding-right: 0vw;
+  }
+  .footer > ul {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+  }
+  .footer-navigation {
+    grid-area: 1 / 1 / 3/ 2;
+  }
+  .footer-icons {
+    grid-area: 1 / 3 / 3 / 4;
+  }
+  .about {
+    font-size: 20px;
+  }
+  .hamburger {
+    display: flex;
+  }
+  .navigation > ul,
+  .navigation {
+    flex-direction: column;
+    padding: 0;
+  }
+  .hamburger {
+    display: flex;
+    align-content: space-around;
+  }
 }
