--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ a {
 .work {
   font-size: 46px;
   font-weight: 1000;
-  color: aquamarine;
+  color: rgb(255, 127, 127);
 }
 
 .about {
@@ -141,15 +141,92 @@ a {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background: #121d33;
-  background-repeat: no-repeat;
-  background-size: cover;
   color: white;
   font-size: 30px;
   flex-wrap: wrap;
   gap: 40px;
   padding-bottom: 20px;
   padding-top: 30px;
+}
+
+.about-background {
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 14%,
+    rgba(99, 0, 0, 1) 98%
+  );
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.projects-background {
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1) 14%,
+    rgba(99, 0, 0, 1) 98%
+  );
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.contact-background {
+  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 14%, #959fac 95%);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50vw;
+  max-width: 500px;
+  min-width: 300px;
+  height: 50vw;
+  max-height: 500px;
+  min-height: 400px;
+  border: 4px solid black;
+  padding: 20px;
+  background-color: #121d332c;
+  backdrop-filter: blur(8px) brightness(140%);
+
+}
+
+.contact-form input {
+  height: 40px;
+  border: 1px solid grey;
+  border-radius: 6px;
+  font-size: large;
+  padding: 5px;
+  margin: 20px;
+
+}
+.contact-form input[type="submit"]:hover {
+  background-color: rgb(202, 0, 0);
+  cursor: pointer;
+}
+
+
+.contact-form input[type="submit"] {
+  font-weight: 600;
+}
+
+.contact-form textarea::placeholder{
+  text-align: center;
+}
+ 
+.contact-form > textarea {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  resize: none;
+  height: 200px;
+  min-width: 231px;
+  width: 30vw;
+  padding: 4px;
+  border-radius: 6px;
+  box-sizing: border-box;
+  border: 1px solid gray;
 }
 
 .about > p,
@@ -274,6 +351,10 @@ a {
   .about > p {
     margin: 0 20px 0 20px;
   }
+
+  .contact-form {
+    display: flex;
+    flex-direction: column;
 }
 @media only screen and (max-width: 767px) {
   .footer {
