--- a/style.css
+++ b/style.css
@@ -182,15 +182,14 @@ a {
   align-items: center;
   width: 50vw;
   max-width: 500px;
-  min-width: 300px;
+  min-width: 240px;
   height: 50vw;
   max-height: 500px;
   min-height: 400px;
-  border: 4px solid black;
   padding: 20px;
   background-color: #121d332c;
   backdrop-filter: blur(8px) brightness(140%);
-
+  border-radius: 20px;
 }
 
 .contact-form input {
@@ -352,10 +351,6 @@ a {
     margin: 0 20px 0 20px;
   }
 
-  .contact-form {
-    display: flex;
-    flex-direction: column;
-}
 @media only screen and (max-width: 767px) {
   .footer {
     padding-left: 0vw;
