--- a/style.css
+++ b/style.css
@@ -1,276 +1,279 @@
 html {
-  background-color: #121d33;
+    background-color: #121d33;
 }
 body {
-  /* background: black; */
-  margin: 0;
-  flex-basis: auto;
+    /* background: black; */
+    margin: 0;
+    flex-basis: auto;
 }
 
 a:visited {
-  color: inherit;
+    color: inherit;
 }
 a {
-  color: black;
+    color: black;
 }
 .navigation {
-  display: flex;
-  background-color: rgba(255, 255, 255, 0.092);
-  padding-left: 7.5vw;
-  padding-right: 7.5vw;
-  margin: 0px;
-  flex-direction: column;
-  align-content: center;
-  align-items: center;
+    display: flex;
+    background-color: rgba(255, 255, 255, 0.092);
+    padding-left: 7.5vw;
+    padding-right: 7.5vw;
+    margin: 0px;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
 }
 
 .navigation {
-  flex: 1;
-  background-color: rgba(255, 255, 255, 0.63);
+    flex: 1;
+    background-color: rgba(255, 255, 255, 0.63);
 }
 
 .navigation > ul {
-  display: flex;
-  justify-content: flex-end;
-  /* justify-content: space-around; */
-  flex-direction: row;
-  align-items: center;
-  flex: 1;
-  gap: 20px;
-  list-style: none;
-  flex-wrap: wrap;
-}
-.navigation > ul > li {
+    display: flex;
+    justify-content: flex-end;
+    /* justify-content: space-around; */
+    flex-direction: row;
+    align-items: center;
+    flex: 1;
+    gap: 20px;
+    list-style: none;
+    flex-wrap: wrap;
 }
 
 .navigation > img {
-  /* width: 240px; */
-  height: auto;
-  /* margin-left: 5.5vw; */
+    /* width: 240px; */
+    height: auto;
+    /* margin-left: 5.5vw; */
 }
 
 .navigation > ul > li > a {
-  text-transform: uppercase;
-  text-decoration: none;
-  flex-grow: 4;
-  font-size: 20px;
-  font-family: "Anton", sans-serif;
-  transition: color 0.2s ease-in-out;
+    text-transform: uppercase;
+    text-decoration: none;
+    flex-grow: 4;
+    font-size: 20px;
+    font-family: 'Anton', sans-serif;
+    transition: color 0.2s ease-in-out;
 }
 
 .footer {
-  padding-left: 7vw;
-  padding-right: 7vw;
-  /* background: #000E28;  */
-  display: grid;
-  grid-template-columns: 0.5fr 0.5fr 0.5fr;
-  grid-template-rows: 0.5fr 0.76fr;
-  background-color: rgba(240, 248, 255, 0.592);
-  grid-template-areas:
-    "a b c"
-    "a d c";
-  align-items: center;
-  justify-items: center;
+    padding-left: 7vw;
+    padding-right: 7vw;
+    /* background: #000E28;  */
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr 0.5fr;
+    grid-template-rows: 0.5fr 0.76fr;
+    background-color: rgba(240, 248, 255, 0.592);
+    grid-template-areas:
+        'a b c'
+        'a d c';
+    align-items: center;
+    justify-items: center;
 }
 
 .footer > img {
-  align-self: center;
-  object-fit: cover;
-  width: 70%;
-  grid-area: b;
-  margin: 0;
+    align-self: center;
+    object-fit: cover;
+    width: 70%;
+    grid-area: b;
+    margin: 0;
 }
 
 .footer > ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  gap: 10px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 10px;
 
-  flex-direction: row;
-  justify-self: center;
-  align-self: flex-end;
+    flex-direction: row;
+    justify-self: center;
+    align-self: flex-end;
 }
 
 .footer-navigation > li > a {
-  grid-area: a;
+    grid-area: a;
 
-  transition: color 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out;
 }
 
 .footer-navigation {
-  justify-self: center;
-  align-self: center;
+    justify-self: center;
+    align-self: center;
 }
 
 .footer-icons > li > a {
-  grid-area: c;
+    grid-area: c;
 }
 
 .footer > ul > li > a,
 .about > footer > a {
-  text-transform: uppercase;
-  text-decoration: none;
-  font-family: "Anton", sans-serif;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: 'Anton', sans-serif;
 }
 
 .footer > span {
-  grid-area: d;
-  align-self: flex-end;
+    grid-area: d;
+    align-self: flex-end;
 }
 
 .navigation > ul > li > a:hover,
 .footer-navigation > li > a:hover,
 .about > footer > a:hover {
-  color: rgb(255, 102, 0);
-  transition: color 0.2s ease-in-out;
+    color: rgb(255, 102, 0);
+    transition: color 0.2s ease-in-out;
 }
 
 .work {
-  font-size: 46px;
-  font-weight: 1000;
-  color: rgb(255, 127, 127);
+    font-size: 46px;
+    font-weight: 1000;
+    color: rgb(255, 127, 127);
+}
+
+.about h3 {
+    margin: 0;
 }
 
 .about {
-  text-overflow: ellipsis;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  color: white;
-  font-size: 30px;
-  flex-wrap: wrap;
-  gap: 40px;
-  padding-bottom: 20px;
-  padding-top: 30px;
+    text-overflow: ellipsis;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    font-size: 30px;
+    flex-wrap: wrap;
+    gap: 40px;
+    padding-bottom: 20px;
+    padding-top: 30px;
 }
 
 .about-background {
-  background: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 1) 14%,
-    rgba(99, 0, 0, 1) 98%
-  );
-  background-repeat: no-repeat;
-  background-size: cover;
+    background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 1) 14%,
+        rgba(99, 0, 0, 1) 98%
+    );
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .projects-background {
-  background: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 1) 14%,
-    rgba(99, 0, 0, 1) 98%
-  );
-  background-repeat: no-repeat;
-  background-size: cover;
+    background: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 1) 14%,
+        rgba(99, 0, 0, 1) 98%
+    );
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .contact-background {
-  background: linear-gradient(180deg, rgba(0, 0, 0, 1) 14%, #959fac 95%);
-  background-repeat: no-repeat;
-  background-size: cover;
+    background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 1) 14%,
+        #959fac 95%
+    );
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .contact-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 50vw;
-  max-width: 500px;
-  min-width: 240px;
-  height: 50vw;
-  max-height: 500px;
-  min-height: 400px;
-  padding: 20px;
-  background-color: #121d332c;
-  backdrop-filter: blur(8px) brightness(140%);
-  border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50vw;
+    max-width: 500px;
+    min-width: 240px;
+    height: 50vw;
+    max-height: 500px;
+    min-height: 400px;
+    padding: 20px;
+    background-color: #121d332c;
+    backdrop-filter: blur(8px) brightness(140%);
 }
 
 .contact-form input {
-  height: 40px;
-  border: 1px solid grey;
-  border-radius: 6px;
-  font-size: large;
-  padding: 5px;
-  margin: 20px;
-
+    height: 40px;
+    border: 1px solid grey;
+    border-radius: 6px;
+    font-size: large;
+    padding: 5px;
+    margin: 20px;
 }
-.contact-form input[type="submit"]:hover {
-  background-color: rgb(202, 0, 0);
-  cursor: pointer;
-}
-
-
-.contact-form input[type="submit"] {
-  font-weight: 600;
+.contact-form input[type='submit']:hover {
+    background-color: rgb(202, 0, 0);
+    cursor: pointer;
 }
 
-.contact-form textarea::placeholder{
-  text-align: center;
+.contact-form input[type='submit'] {
+    font-weight: 600;
 }
- 
+
+.contact-form textarea::placeholder {
+    text-align: center;
+}
+
 .contact-form > textarea {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: large;
-  resize: none;
-  height: 200px;
-  min-width: 231px;
-  width: 30vw;
-  padding: 4px;
-  border-radius: 6px;
-  box-sizing: border-box;
-  border: 1px solid gray;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    resize: none;
+    height: 200px;
+    min-width: 231px;
+    width: 30vw;
+    padding: 4px;
+    border-radius: 6px;
+    box-sizing: border-box;
+    border: 1px solid gray;
 }
 
 .about > p,
 .about > footer {
-  margin-right: 0;
-  padding: 0 20px 0 20px;
+    margin-right: 0;
+    padding: 0 20px 0 20px;
 }
 
 .projects {
-  height: 100%;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  align-items: flex-end;
-  flex-direction: column;
-  background: #fffff5;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  color: white;
-  font-size: 25px;
-  flex-wrap: wrap;
-  gap: 30px;
-  color: black;
+    height: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: column;
+    background: #fffff5;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    color: white;
+    font-size: 25px;
+    flex-wrap: wrap;
+    gap: 30px;
+    color: black;
 }
 
 .projects > header {
-  padding: 20px;
+    padding: 20px;
 }
 
 .projects > p {
-  padding-left: 50px;
-  text-justify: inter-word;
+    padding-left: 50px;
+    text-justify: inter-word;
 }
 
 .projects > footer {
-  padding-bottom: 30px;
+    padding-bottom: 30px;
 }
 
 .check-projects {
-  color: white;
-  border: 3px solid aquamarine;
-  border-radius: 40px;
-  padding: 10px 40px 10px 40px;
-  font-size: medium;
+    color: white;
+    border: 3px solid aquamarine;
+    border-radius: 40px;
+    padding: 10px 40px 10px 40px;
+    font-size: medium;
 }
 /* .check-projects:hover {
   color: red !important;
@@ -280,106 +283,113 @@ a {
 /* Hamburger */
 
 .hamburger {
-  display: none;
-  flex-direction: column;
-  width: 60px;
-  cursor: pointer;
+    display: none;
+    flex-direction: column;
+    width: 60px;
+    cursor: pointer;
 }
 
 .hamburger > span {
-  background: #fffff5;
-  border-radius: 10px;
-  height: 5px;
-  margin: 8px 0;
-  transition: 0.4s cubic-bezier(0.5, -0.5, 0.3, 1.5);
+    background: #fffff5;
+    border-radius: 10px;
+    height: 5px;
+    margin: 8px 0;
+    transition: 0.4s cubic-bezier(0.5, -0.5, 0.3, 1.5);
 }
 
 .hamburger > span:nth-of-type(1) {
-  width: 100%;
+    width: 100%;
 }
 
 .hamburger > span:nth-of-type(2) {
-  width: 100%;
+    width: 100%;
 }
 
 .hamburger > span:nth-of-type(3) {
-  width: 100%;
+    width: 100%;
 }
 
-.hamburger > input[type="checkbox"] {
-  display: none;
+.hamburger > input[type='checkbox'] {
+    display: none;
 }
 
-.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(1) {
-  transform-origin: bottom;
-  transform: translate(0px, 20px) rotateZ(45deg);
+.hamburger
+    > input[type='checkbox']:checked
+    ~ span:nth-of-type(1) {
+    transform-origin: bottom;
+    transform: translate(0px, 20px) rotateZ(45deg);
 }
-.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(2) {
-  transform-origin: bottom;
-  transform: scale(0);
+.hamburger
+    > input[type='checkbox']:checked
+    ~ span:nth-of-type(2) {
+    transform-origin: bottom;
+    transform: scale(0);
 }
-.hamburger > input[type="checkbox"]:checked ~ span:nth-of-type(3) {
-  transform-origin: top;
-  transform: translate(0px, -20px) rotateZ(-45deg);
+.hamburger
+    > input[type='checkbox']:checked
+    ~ span:nth-of-type(3) {
+    transform-origin: top;
+    transform: translate(0px, -20px) rotateZ(-45deg);
 }
 
 /* Hambuger:end */
 
 .visually-hidden {
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
 }
 
 .hidden {
-  display: none;
-  flex-grow: 0;
-  flex: 0;
-  height: 0;
+    display: none;
+    flex-grow: 0;
+    flex: 0;
+    height: 0;
 }
 
 @media only screen and (max-width: 1000px) {
-  .footer {
-    padding-left: 1vw;
-    padding-right: 1vw;
-  }
-  .about > p {
-    margin: 0 20px 0 20px;
-  }
+    .footer {
+        padding-left: 1vw;
+        padding-right: 1vw;
+    }
+    .about > p {
+        margin: 0 20px 0 20px;
+    }
+}
 
 @media only screen and (max-width: 767px) {
-  .footer {
-    padding-left: 0vw;
-    padding-right: 0vw;
-  }
-  .footer > ul {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-  }
-  .footer-navigation {
-    grid-area: 1 / 1 / 3/ 2;
-  }
-  .footer-icons {
-    grid-area: 1 / 3 / 3 / 4;
-  }
-  .about {
-    font-size: 20px;
-  }
-  .hamburger {
-    display: flex;
-  }
-  .navigation > ul,
-  .navigation {
-    flex-direction: column;
-    padding: 0;
-  }
-  .hamburger {
-    display: flex;
-    align-content: space-around;
-  }
+    .footer {
+        padding-left: 0vw;
+        padding-right: 0vw;
+    }
+    .footer > ul {
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+    }
+    .footer-navigation {
+        grid-area: 1 / 1 / 3/ 2;
+    }
+    .footer-icons {
+        grid-area: 1 / 3 / 3 / 4;
+    }
+    .about {
+        font-size: 20px;
+    }
+    .hamburger {
+        display: flex;
+    }
+    .navigation > ul,
+    .navigation {
+        flex-direction: column;
+        padding: 0;
+    }
+    .hamburger {
+        display: flex;
+        align-content: space-around;
+    }
 }
