--- a/style.css
+++ b/style.css
@@ -13,9 +13,12 @@ a:visited {
 a {
     color: black;
 }
+
+/* Navigation section */
+
 .navigation {
     display: flex;
-    background-color: rgba(255, 255, 255, 0.092);
+    background-color: rgb(255, 255, 255);
     padding-left: 7.5vw;
     padding-right: 7.5vw;
     margin: 0px;
@@ -26,7 +29,7 @@ a {
 
 .navigation {
     flex: 1;
-    background-color: rgba(255, 255, 255, 0.63);
+    background-color: rgb(239, 203, 153);
 }
 
 .navigation > ul {
@@ -56,6 +59,9 @@ a {
     transition: color 0.2s ease-in-out;
 }
 
+/* Navigation section END */
+
+/* Footer section  */
 .footer {
     padding-left: 7vw;
     padding-right: 7vw;
@@ -77,6 +83,7 @@ a {
     width: 70%;
     grid-area: b;
     margin: 0;
+    max-width: 160px;
 }
 
 .footer > ul {
@@ -106,8 +113,7 @@ a {
     grid-area: c;
 }
 
-.footer > ul > li > a,
-.about > footer > a {
+.footer > ul > li > a {
     text-transform: uppercase;
     text-decoration: none;
     font-family: 'Anton', sans-serif;
@@ -118,24 +124,17 @@ a {
     align-self: flex-end;
 }
 
+/* Footer section END */
+
 .navigation > ul > li > a:hover,
-.footer-navigation > li > a:hover,
-.about > footer > a:hover {
+.footer-navigation > li > a:hover {
     color: rgb(255, 102, 0);
     transition: color 0.2s ease-in-out;
 }
 
-.work {
-    font-size: 46px;
-    font-weight: 1000;
-    color: rgb(255, 127, 127);
-}
+/* Contact section */
 
-.about h3 {
-    margin: 0;
-}
-
-.about {
+.contact-section {
     text-overflow: ellipsis;
     height: 100%;
     width: 100%;
@@ -149,36 +148,6 @@ a {
     gap: 40px;
     padding-bottom: 20px;
     padding-top: 30px;
-}
-
-.about-background {
-    background: linear-gradient(
-        180deg,
-        rgba(0, 0, 0, 1) 14%,
-        rgba(99, 0, 0, 1) 98%
-    );
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.projects-background {
-    background: linear-gradient(
-        0deg,
-        rgba(0, 0, 0, 1) 14%,
-        rgba(99, 0, 0, 1) 98%
-    );
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.contact-background {
-    background: linear-gradient(
-        180deg,
-        rgba(0, 0, 0, 1) 14%,
-        #959fac 95%
-    );
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .contact-form {
@@ -224,6 +193,7 @@ a {
     resize: none;
     height: 200px;
     min-width: 231px;
+    max-width: 100%;
     width: 30vw;
     padding: 4px;
     border-radius: 6px;
@@ -231,54 +201,41 @@ a {
     border: 1px solid gray;
 }
 
-.about > p,
-.about > footer {
-    margin-right: 0;
-    padding: 0 20px 0 20px;
-}
+/* Contact section END */
 
-.projects {
-    height: 100%;
+.main-content {
     display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: flex-end;
     flex-direction: column;
-    background: #fffff5;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    color: white;
-    font-size: 25px;
+}
+
+.main-content article {
+    height: 100%;
+    min-height: 600px;
+}
+
+.about-article {
+    padding: 0;
+    margin: 0;
+    background-color: #85dcb1;
+}
+
+.projects-article {
+    background-color: rgb(232, 232, 232);
+}
+
+.education-article {
+    background-color: #e8a87c;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.education-article section {
+    border: 1px solid black;
+    background-color: #e4e7ed54;
+    width: 300px;
     flex-wrap: wrap;
-    gap: 30px;
-    color: black;
 }
-
-.projects > header {
-    padding: 20px;
-}
-
-.projects > p {
-    padding-left: 50px;
-    text-justify: inter-word;
-}
-
-.projects > footer {
-    padding-bottom: 30px;
-}
-
-.check-projects {
-    color: white;
-    border: 3px solid aquamarine;
-    border-radius: 40px;
-    padding: 10px 40px 10px 40px;
-    font-size: medium;
-}
-/* .check-projects:hover {
-  color: red !important;
-  border-color: red; */
-/* } */
 
 /* Hamburger */
 
@@ -356,12 +313,13 @@ a {
         padding-left: 1vw;
         padding-right: 1vw;
     }
-    .about > p {
-        margin: 0 20px 0 20px;
-    }
 }
 
 @media only screen and (max-width: 767px) {
+    .projects-list article {
+        min-height: 450px;
+        min-width: 350px;
+    }
     .footer {
         padding-left: 0vw;
         padding-right: 0vw;
@@ -377,9 +335,7 @@ a {
     .footer-icons {
         grid-area: 1 / 3 / 3 / 4;
     }
-    .about {
-        font-size: 20px;
-    }
+
     .hamburger {
         display: flex;
     }
