fixed mobile version (education section problem)

--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .education-article section {
