--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --education-color: hsl(24, 70%, 70%);
     --footer-color: #fff;
     --projects-color: rgb(118, 102, 102);
-    --about-me-color-transparency: rgba(0, 0, 0, 0.206);
+    --about-me-color-transparency: rgba(0, 0, 0, 0.104);
 
     --base-padding: 1rem;
     --padding-main: 2rem;
@@ -14,6 +14,7 @@
     --base-border-radius: 10px;
     --padding-left-and-right: 0 20vw 0 20vw;
     --padding-left-and-right-mobile: 8px;
+    --list-box-gradient: 1;
 }
 
 html {
@@ -22,8 +23,10 @@ html {
     scroll-padding-top: 5em;
 }
 body {
+    font-family: 'Lato', sans-serif;
     /* flex-basis: auto; */
     margin: 0;
+    min-height: 100vh;
 }
 
 article {
@@ -257,7 +260,6 @@ a {
 .education-article section {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
     background-color: #e4e7ed54;
     width: 300px;
     padding: var(--base-padding);
@@ -266,8 +268,6 @@ a {
     text-align: justify;
 }
 
-.about-me {
-}
 .about-me-header {
     min-width: 270px;
     display: flex;
@@ -292,25 +292,58 @@ a {
 }
 
 .about-others {
+    background-color: var(--about-color);
     display: flex;
-    gap: var(--base-flex-gap);
+    flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
-    align-items: center;
+    gap: var(--base-flex-gap);
 }
 
 .about-others section {
-    flex: 1 1 340px;
-    /* flex: 1 0 450px; */
-}
-
-.tech-stack {
-    border: 1px solid black;
-}
-
-.other-skills {
-    margin: var(--base-margin);
+    display: flex;
+    flex-direction: column;
+    background-color: var(--about-me-color-transparency);
     padding: var(--base-padding);
+    margin: var(--base-margin);
+    border-radius: var(--base-border-radius);
+    text-align: justify;
+    flex: 1 1 350px;
+}
+
+.other-skills ul,
+.tech-stack ul {
+    padding-left: 0;
+    list-style-type: none;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.other-skills ul li,
+.tech-stack ul li {
     border: 1px solid black;
+    flex: 1 1 30%;
+    text-align: center;
+    padding: var(--base-padding);
+    background: linear-gradient(#e66465, #9198e5);
+    font-size: 17px;
+}
+.other-skills ul h2,
+.tech-stack ul h2 {
+    flex: 1 1 100%;
+    text-align: center;
+    padding: var(--base-padding);
+    font-size: 1.2em;
+}
+.other-skills ul li:hover,
+.tech-stack ul li:hover {
+    border: 1px solid black;
+    flex: 1 1 30%;
+    text-align: center;
+    padding: var(--base-padding);
+    background: #85dcb1;
 }
 
 /* Hamburger */
